fix: hero image spacing bug in landscape on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -395,3 +395,11 @@ h3 ~ p {
     }
 }
 
+@media (orientation: landscape) {
+  img#hero-image {
+        width: 100%;
+        position: relative;
+        left: 1%;
+    }
+
+}
